--- a/README.adoc
+++ b/README.adoc
@@ -16,7 +16,7 @@ You can watch an introductory video:
 video::cmmq-JBMbbQ[youtube]
 
 link::https://img.youtube.com/vi/cmmq-JBMbbQ/0.jpg)](http://www.youtube.com/watch?v=cmmq-JBMbbQ)
-image:https://img.shields.io/badge/License-Apache%202.0-blue.svg[link="http://www.apache.org/licenses/LICENSE-2.0"]
+image:http://clause.io/assets/images/heavier-rounded-white.png[link="http://www.apache.org/licenses/LICENSE-2.0"]
 
 # What is Accord Project?
 
