--- a/README.adoc
+++ b/README.adoc
@@ -62,6 +62,11 @@ end
 <2> URL mapping
 <3> HTTP response body
 
+[source,javascript]
+----
+include::{sourcedir}/test.js[]
+----
+
 == How can I create a Smart Legal Contract from existing Smart Clauses?
 
 TDB
