--- a/README.adoc
+++ b/README.adoc
@@ -2,6 +2,13 @@
 :toc-placement!:
 :imagesdir: ./images
 :source-highlighter: pygments
+ifdef::env-github[]
+:tip-caption: :bulb:
+:note-caption: :information_source:
+:important-caption: :heavy_exclamation_mark:
+:caution-caption: :fire:
+:warning-caption: :warning:
+endif::[]
 
 = Hackathon Frequently Asked Questions
 
@@ -84,3 +91,19 @@ Yes, Clause uses an API Gateway to rate-limit execution requests. For high-volum
 == What is the Clause pricing model?
 
 The Clause service is currently in closed beta. We have not yet published pricing details, however we expect to use a fairly standard software-as-a-service, pay-as-you-go pricing model.
+
+[NOTE]
+====
+A sample note admonition.
+We can use gemoji icons in the Asciidoctor markup.
+We assign an icon name to the document
+attributes `tip-caption`, `note-caption` and `important-caption`.
+====
+
+TIP: It works!
+
+IMPORTANT: Asciidoctor is awesome, don't forget!
+
+CAUTION: Don't forget to add the `...-caption` document attributes in the header of the document on GitHub.
+
+WARNING: You have no reason not to use Asciidoctor.
